[package]
name = "hatchling_lang_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Adam Martinez <tyleradammartinez@outlook.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
pretty_assertions = "1.3.0"

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.83"
serde = { version="1.0.145", features=["derive"] }
serde_json = "1.0"
uuid = { version="1.1.2", features=["v4"] }
