[package]
name = "hatchling_lang_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Adam Martinez <tyleradammartinez@outlook.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.2"
pretty_assertions = "1.3.0"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.83"
serde = { version="1.0.145", features=["derive"] }
serde_json = "1.0"
uuid = { version="1.1.2", features=["v4"] }
regex = "1.6.0"
lazy_static = "1.4.0"
console_error_panic_hook = { version="0.1.1", optional=true }
wee_alloc = { version="0.4.2", optional=true }
